[project]
name = "beam-monitor"
version = "0.1.0"
description = "Monitors a camera feed that has a laser beam projected on to a connected camera"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pyqt5>=5.15",
    "scipy>=1.14.1",
]


[tool.uv]
constraint-dependencies = ["pyqt5-qt5<=5.15.2"]